--- a/Lectures/02_DigitalCameras.ipynb
+++ b/Lectures/02_DigitalCameras.ipynb
@@ -48,14 +48,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "546f3f11",
+   "id": "b2aa9744",
    "metadata": {},
    "source": [
     "## Photo-detectors\n",
     "\n",
     "In photodectors photons hit the sensor and generate charge (electrons).  The photo generated electrons (or photoelectons) \n",
     "\n",
+    "### Photo-Multiplier tube\n",
     "\n",
+    "<img src=\"img/PMT.PNG\" width=\"360\">\n",
+    "\n",
+    "A PMT consist of:\n",
+    "\n",
+    "Photocathode: It absorbs photons and emits electrons\n",
+    "\n",
+    "Dynods: It increase the number of electrons emitted by the photocathode, in other words, it amplifies the weak signal.  The voltage across the dynods controls the amplification factor.\n",
+    "\n",
+    "Anode: This is very the output charge is read after amplification.\n",
+    "\n",
+    "PMTs are used for low light, single photon, and very fast detection. They are typically used in LIDAR to count time of arrivals of individual photons, sensitive applications, such as nuclear radiation detection, biofluidic application (techniques such as FRAP, etc).\n",
+    "\n",
+    "### Photodiode\n",
+    "\n",
+    "<img src=\"img/Photodiode.png\" width=\"360\">\n",
+    "\n",
+    "Photodiodes are semiconductors.  They are based on a p-n junctions of semiconductors, commonly silicon-silican type, but other type such as InGaAs exists that have different spectral response.   Photodiodes have high quantum efficiency, but do not enable internal amplification.  They are the fundamental components behind camera pixel, which are 2D matrices of photodiodes.\n",
+    "\n",
+    " ### CCD or charge-couple device\n",
+    "In a CCD each pixel charge is transferred through a limited number of output nodes (often just one) to be converted to voltage, buffered, and then sent off-chip as an analog signal where it will be converted to a digital signal by an ADC.  This enables to have all the pixel dedicated to signal capture and obtain very high output uniformity (i.e. each pixel have very similar sensitivity).  However, this limits the acquisition (or frame) rate of the imager.\n",
+    "\n",
+    "### CMOS or Complementary metal-oxide semiconductors\n",
+    "CMOS have a very different architecture.  Each pixel has its own charge-to-analog-voltage conversion.  The sensor can also inclu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "546f3f11",
+   "metadata": {},
+   "source": [
     "### Characteristics\n",
     "\n",
     "#### Efficiency of photo conversion process\n",
@@ -148,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b82c3a4c",
    "metadata": {},
    "outputs": [
@@ -199,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "93c9d294",
    "metadata": {},
    "outputs": [
@@ -240,34 +271,6 @@
     "<img src=\"img/CalibTarget.jpg\" width=\"360\">\n",
     "\n",
     "Digital cameras have finite minimum regions of detection (pixels), that set a limit on the spatial sesolution of a camera. However the spatial resolution is affected by other factors such as the quality of the lens or imaging system. The limiting spatial resolution is commonly determined from the minimum separation required for discrimination between two high contrast objects, e.g. white points or lines on a black background, such as the 1951 USAF resolution target above. Contrast is an important factor in resolution as high contrast objects (e.g. black and white lines) are more readily resolved than low contrast objects (e.g. adjacent gray lines). The contrast and resolution performance of a camera can be incorporated into a single specification called the Modulation Transfer Function (MTF).  This will be covered in more details later."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad9846ed",
-   "metadata": {},
-   "source": [
-    "### Photo-Multiplier tube\n",
-    "\n",
-    "<img src=\"img/PMT.PNG\" width=\"360\">\n",
-    "\n",
-    "A PMT consist of:\n",
-    "\n",
-    "Photocathode: It absorbs photons and emits electrons\n",
-    "\n",
-    "Dynods: It increase the number of electrons emitted by the photocathode, in other words, it amplifies the weak signal.  The voltage across the dynods controls the amplification factor.\n",
-    "\n",
-    "Anode: This is very the output charge is read after amplification.\n",
-    "\n",
-    "PMTs are used for low light, single photon, and very fast detection. They are typically used in LIDAR to count time of arrivals of individual photons, sensitive applications, such as nuclear radiation detection, biofluidic application (techniques such as FRAP, etc).\n",
-    "\n",
-    "### Photodiode\n",
-    "\n",
-    "<img src=\"img/Photodiode.png\" width=\"360\">\n",
-    "\n",
-    "Photodiodes are semiconductors.  They are based on a p-n junctions of semiconductors, commonly silicon-silican type, but other type such as InGaAs exists that have different spectral response.   Photodiodes have high quantum efficiency, but do not enable internal amplification.  They are the fundamental components behind camera pixel, which are 2D matrices of photodiodes.\n",
-    "\n",
-    " "
    ]
   },
   {
@@ -437,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
