--- a/Lectures/02_DigitalCameras.ipynb
+++ b/Lectures/02_DigitalCameras.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "<img src=\"img/Photodiode.png\" width=\"360\">\n",
     "\n",
-    "Photodiodes are semiconductors.  They are based on a p-n junctions of semiconductors, commonly silicon-silican type, but other type such as InGaAs exists that have different spectral response.   Photodiodes have high quantum efficiency, but do not enable internal amplification.  They are the fundamental components behind camera pixel, which are 2D matrices of photodiodes.\n",
+    "Photodiodes are semiconductors.  They are based on a p-n junctions of semiconductors, commonly silicon-silican type, but other type such as InGaAs exists that have different spectral response.   Photodiodes have high quantum efficiency, but do not enable internal amplification.  They can be organized in an array forming camera sensors.  Howevery they are not the typical type of photosensors.\n",
     "\n",
     " ### CCD or charge-couple device\n",
     "In a CCD each pixel charge is transferred through a limited number of output nodes (often just one) to be converted to voltage, buffered, and then sent off-chip as an analog signal where it will be converted to a digital signal by an ADC.  This enables to have all the pixel dedicated to signal capture and obtain very high output uniformity (i.e. each pixel have very similar sensitivity).  However, this limits the acquisition (or frame) rate of the imager.\n",
@@ -288,9 +288,9 @@
     "\n",
     "There are two main types of pixels: CCD and CMOS.\n",
     "\n",
-    "__CCD or charge-couple device__:  In a CCD each pixel charge is transferred through a limited number of output nodes (often just one) to be converted to voltage, buffered, and then sent off-chip as an analog signal where it will be converted to a digital signal by an ADC.  This enables to have all the pixel dedicated to signal capture and obtain very high output uniformity (i.e. each pixel have very similar sensitivity).  However, this limits the acquisition (or frame) rate of the imager.\n",
+    "__CCD or charge-couple device In a CCD each pixel charge is transferred through a limited number of output nodes (often just one) to be converted to voltage, buffered, and then sent off-chip as an analog signal where it will be converted to a digital signal by an ADC.  This enables to have all the pixel dedicated to signal capture and obtain very high output uniformity (i.e. each pixel have very similar sensitivity).  However, this limits the acquisition (or frame) rate of the imager.__\n",
     "\n",
-    "__CMOS or Complementary metal-oxide semiconductors__ have a very different architecture.  Each pixel has its own charge-to-analog-voltage conversion.  The sensor can also include amplifiers, noise-corrections, and ADCs.  In other words, the chip output is now digital bits.  As a result of this integration of electronic components within the chip dye, there is less area dedicated for the photosensitive area, in other words, CMOS sensors will have a smaller fill factor than CCDs.  Because each pixel does its own charge to voltage conversion, the signal uniformity is lower than CCDs.  CMOS based cameras are also cheaper as they require less off-chip components. They are higher speed, but lower quality than CCDs.  \n",
+    "__CMOS or Complementary metal-oxide semiconductors have a very different architecture.  Each pixel has its own charge-to-analog-voltage conversion.  The sensor can also include amplifiers, noise-corrections, and ADCs.  In other words, the chip output is now digital bits.  As a result of this integration of electronic components within the chip dye, there is less area dedicated for the photosensitive area, in other words, CMOS sensors will have a smaller fill factor than CCDs.  Because each pixel does its own charge to voltage conversion, the signal uniformity is lower than CCDs.  CMOS based cameras are also cheaper as they require less off-chip components. They are higher speed, but lower quality than CCDs.  __\n",
     "\n",
     "<img src=\"img/cmoschips.jpg\" width=\"360\">\n",
     "\n",
@@ -440,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
