--- a/HWs/HW01.ipynb
+++ b/HWs/HW01.ipynb
@@ -7,90 +7,93 @@
     "# MAE 3120\n",
     "## HW 01\n",
     "\n",
-    "Due 02/12"
+    "Due 02/06"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1\n",
+    "### 1  $1^{st}$ order high pass filter\n",
     "\n",
-    "The actual (true) voltage is 3.1605 V.\n",
+    "The following RC circuit is a passive first-order high-pass filter.  \n",
+    "<img src=\"img/HPRCFilter.png\" width=\"240\">\n",
     "\n",
-    "A digital multimeter is used to record the following voltages: 3.114, 3.010, 3.239, 3.019, 2.935, 3.050, 3.011, 3.125 V.\n",
+    "(a) Using complex definiation of impedance prove that (show your steps):\n",
+    "\\begin{align*}\n",
+    "\\frac{V_{out}}{V_{in}} = \\frac{i \\omega RC}{1 + i \\omega RC} \n",
+    "\\end{align*}\n",
     "\n",
-    "(a) Calculate the mean systematic (or bias) error, and the precision error for this set of data.\n",
+    "(b) Introduce the cutoff frequency, $f_c$: \n",
+    "\\begin{align*}\n",
+    "f_{c} = \\frac{1}{2\\pi RC}\n",
+    "\\end{align*}\n",
+    "and show that the gain, $G$, is:\n",
+    "\\begin{align*}\n",
+    "G = \\frac{|V_{out}|}{|V_{in}|} = \\frac{1}{\\sqrt{1+ \\left( \\frac{f_{c}}{f}\\right)^2 }}\n",
+    "\\end{align*}\n",
     "\n",
-    "(b) If possible, how would you make the multimeter more accurate?\n",
+    "(c) Plot the Bode diagram of this filter:\n",
     "\n",
-    "(c) If possible, how would you make the multimeter more precise?"
+    "Note the phase is given as: \n",
+    "\\begin{align*}\n",
+    "\\phi = \\arctan \\left( \\frac{f_{c}}{f} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "\n",
+    "(d) Does the output lead or lag the input."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2\n",
+    "### 2 Optimum power transfer\n",
     "\n",
-    "Consider the periodic function:\n",
+    "<img src=\"img/OptimalLoad.png\" width=\"240\">\n",
     "\n",
-    "\\begin{align}\n",
-    "y(t) = \\frac{t}{\\pi} \\quad \\text{for}\\, -\\pi \\geq t > \\pi\n",
-    "\\end{align}\n",
+    "(a) Show that the power in the load, $P_L$ is:\n",
+    "\\begin{align*}\n",
+    "P_L = V_T \\left( \\frac{R_L}{R_L+R_T} \\right)  \\left( \\frac{V_T}{R_L+R_T} \\right)\n",
+    "\\end{align*}\n",
     "\n",
-    "(a) Plot the function $y(t)$ for $-3 \\pi \\geq t > 3 \\pi$.\n",
-    "\n",
-    "(b) Is the function odd or even? What does this imply for the Fourier coefficients $A_n$ and $B_n$?\n",
-    "\n",
-    "(c) Calculate $A_0$ and the $A_n$ and $B_n$.\n",
-    "\n",
-    "(d) Plot the first 8 harmonics ($n = 1 : 8$).\n",
-    "\n",
-    "(e) Plot of the sum of the first 8 harmonics (i.e. Fourier transform) overlapped with the original function.\n",
-    "Describe discrepancies between the Fourier series and the original function.\n",
-    "\n",
-    "(f) Incease the number of harmonics in your Fourier transform. How many harmonics are necessary to\n",
-    "reconstruct the original curve well?"
+    "(b) Show that the load is optimum when:\n",
+    "\\begin{align*}\n",
+    "R_L = R_T\n",
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3  \n",
+    "### 3 Differencing Amplifier\n",
     "\n",
-    "The signal $y(t)$ is sampled at 4.1 Hz and 1,024 points are acquired:\n",
-    "\\begin{align}\n",
-    "y(t) = 0.2425 + 1.2366 \\cos(2 \\pi t) + 2.2273 \\cos(10 \\pi t) - 1.7909 \\cos(14 \\pi t)\n",
-    "\\end{align}\n",
     "\n",
-    "(a) Is there aliasing at any of the harmonics? If so which harmonic(s)?\n",
+    "<img src=\"img/DiffAmp.png\" width=\"240\">\n",
     "\n",
-    "(b) Using FFTs, plot the spectrum. Remember to normalize the spectrum.\n",
-    "\n",
-    "(c) Propose a new sampling rate to digitze the signal accurately and compute the new spectra with FFT. "
+    "Show that:\n",
+    "\\begin{align*}\n",
+    "V_{out} = \\left( \\frac{R_2}{R_1} \\right) \\left( V_{in(+)} - V_{in(-)} \\right)\n",
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4\n",
+    "### 4 Design of amplifier stages\n",
     "\n",
-    "A voltage signal is sampled digitally in the laboratory at three different sampling frequencies. Here is a\n",
-    "record of the observations:\n",
+    "One wishes to measure a pressure pulse with a very sensitive load cell. Unfortunately, the voltage output of the pressure transducer is $\\pm 5$ mV and the smallest range of our Data Acquisition (DAQ) board is $\\pm 1$ V with a desired bandwidth of 50 kHz.  The GBP of your amplifier stage is 1 MHz.\n",
     "\n",
-    "1- Data sampled at 256 Hz: A signal appears at 52 Hz with amplitude 3.0 V and another peak appears\n",
-    "at 112 Hz with amplitude 1.0 V.\n",
+    "(a) To utilize the most of our DAQ board dynamic range, and hence increase our resolution, we wish to amplify our signal. What should be the gain to make the most of your DAQ system?\n",
     "\n",
-    "2- Data sampled at 512 Hz: A signal appears at 204 Hz with amplitude 3.0 V. Another signal appears at\n",
-    "112 Hz, with amplitude close to 1.0 V.\n",
+    "(b) How many amplifier stages would you need to successfully amplify your signal?\n",
     "\n",
-    "3- Data sampled at 1,024 Hz: A signal appears at 204 Hz, with amplitude close to 3.0 V. Another signal appears 400 Hz, with amplitude close to 1.0 V. \n",
+    "(c) Because experiments are never easy, we have high-power\n",
+    "electrical components just next to the DAQ system, which create a lot of electromagnetic noise.  Which types of amplifier stages will you use?\n",
     "\n",
-    "Explain any aliasing frequencies in these measurements? Show all your calculations for full credit. What are\n",
-    "most likely the true frequencies (and their corresponding amplitudes) in the voltage signal?"
+    "(d) Present a diagram of your amplifier chain.\n"
    ]
   },
   {
@@ -117,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
