--- a/HWs/HW01.ipynb
+++ b/HWs/HW01.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "### 2 Optimum power transfer\n",
     "\n",
-    "<img src=\"img/OptimalLoad.png\" width=\"240\">\n",
+    "<img src=\"img/OptimalLoad.PNG\" width=\"240\">\n",
     "\n",
     "(a) Show that the power in the load, $P_L$ is:\n",
     "\\begin{align*}\n",
@@ -70,7 +70,7 @@
     "### 3 Differencing Amplifier\n",
     "\n",
     "\n",
-    "<img src=\"img/DiffAmp.png\" width=\"240\">\n",
+    "<img src=\"img/DiffAmp.PNG\" width=\"240\">\n",
     "\n",
     "Show that:\n",
     "\\begin{align*}\n",
