--- a/Lectures/XX_MidTermReview.ipynb
+++ b/Lectures/XX_MidTermReview.ipynb
@@ -23,38 +23,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2- Dynamic response of measurement systems\n",
-    "\n",
-    "\\begin{align*}\n",
-    "a_n\\frac{d^ny}{dt^n} + a_{n-1}\\frac{d^{n-1}y}{dt^{n-1}}x + \\dots + a_1 \\frac{dy}{dt} + a_0 y = F(t)\n",
-    "\\end{align*}\n",
-    "\n",
-    "###  0$^{\\mathrm{th}}$ order system\n",
-    "\n",
-    "\\begin{align*}\n",
-    "y(t) = K F(t) = \\frac{1}{a_0} F(t) \\quad \\text{$K=1/a_0$ is called the _static sensitivity_ or _steady-state gain_}\n",
-    "\\end{align*}\n",
-    "\n",
-    "###  1$^{\\mathrm{st}}$ order system\n",
-    "\n",
-    "\\begin{align*}\n",
-    "a_1 \\frac{dy}{dt} + a_0 y = F(t) \\quad\n",
-    "\\tau \\frac{dy}{dt} + y = K F(t)\n",
-    "\\end{align*}\n",
-    "with $\\tau = a_1/a_0$ the time constant of the system.  \n",
-    "\n",
-    "###  2$^{\\mathrm{nd}}$ order system\n",
-    "\n",
-    "\\begin{align*}\n",
-    "a_2 \\frac{d^2y}{dt^2} + a_1 \\frac{dy}{dt} + a_0 y = F(t) \\quad\n",
-    "\\frac{1}{\\omega^2_n} \\frac{d^2y}{dt^2} + \\frac{2\\zeta}{\\omega_n} \\frac{dy}{dt} + y = K F(t)\n",
-    "\\end{align*}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 3- Digital data acquisition\n",
     "### Binary to decimal conversion\n",
     "\n",
@@ -150,9 +118,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4- Signal Conditioning\n",
+    "## 4- Review of Electronics\n",
     "\n",
     "### Basic electronics\n",
+    "\n",
+    "RLC\n",
     "\n",
     "### Filters\n",
     "#### $1^{\\mathrm{st}}$ order low-pass filter\n",
@@ -162,54 +132,11 @@
     "G & = \\frac{|V_{out}|}{|V_{in}|} =  \\frac{1}{\\sqrt{1+ \\left( \\frac{f}{f_{cutoff}}\\right)^2 }} \\quad\n",
     "\\phi = -\\arctan \\left( \\frac{f}{f_{cutoff}} \\right)\n",
     "\\end{align*}\n",
-    "#### Low-pass filter of order $n$\n",
-    "\\begin{align*}\n",
-    "G = \\frac{1}{\\sqrt{1+ \\left( \\frac{f}{f_{cutoff}}\\right)^{2n} }}\n",
-    "\\end{align*}\n",
-    "#### $1^{\\mathrm{st}}$ order high-pass filter\n",
-    "\\begin{align*}\n",
-    "G = \\frac{1}{\\sqrt{1+ \\left( \\frac{f_{cutoff}}{f}\\right)^2 }} \\quad\n",
-    "\\phi = \\arctan \\left( \\frac{f_{cutoff}}{f} \\right)\n",
-    "\\end{align*}\n",
     "\n",
-    "#### high-pass filter of order $n$\n",
-    "\\begin{align*}\n",
-    "G = \\frac{1}{\\sqrt{1+ \\left( \\frac{f_{cutoff}}{f}\\right)^{2n} }} \n",
-    "\\end{align*}\n",
     "\n",
     "\n",
     "### Op-Amps\n",
     "ideal op-amps vs real effects (impedance loading, GBP, CMRR)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5- Design Stage uncertainty analysis\n",
-    "\n",
-    "### Expected uncertainty\n",
-    "RSS: root of the sum of the squares \n",
-    "\n",
-    "### Combining elemental uncertainties\n",
-    "\\begin{align}\n",
-    "u_{sys} = \\sqrt{\\sum_i u_{e,i}^2} \\quad \\text{with $u_{e,i}$ elemental error}\n",
-    "\\end{align}\n",
-    "\n",
-    "### Overall uncertainty\n",
-    "\\begin{align}\n",
-    "u_{overall} = \\sqrt{\\sum_j u_{sys,j}^2} \\quad \\text{with $u_{sys,j}$ error of each component}\n",
-    "\\end{align}\n",
-    "\n",
-    "\n",
-    "### Uncertainty of a result\n",
-    "\\begin{align}\n",
-    "R = f(x_1, x_2, \\dots) \\quad u_R = \\sqrt{\\sum_i \\left( u_{x_i} \\frac{\\partial f}{\\partial x_i} \\right)^2}\n",
-    "\\end{align}\n",
-    "If f is polynomial\n",
-    "\\begin{align}\n",
-    "f = x_1^{a_1} \\cdot x_2^{a_2} \\cdot \\dots \\quad \\frac{u_R}{R} = \\sqrt{\\sum_i \\left( \\frac{u_{x_i}}{x_i} a_i \\right)^2}\n",
-    "\\end{align}\n"
    ]
   },
   {
@@ -403,19 +330,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dynamic response\n",
-    "A first-order, passive low-pass (RC) filter is designed to have a cut-off frequency, $f_c = 1$ kHz. Its resistance equals 120 $\\Omega$. Determine the filter:\n",
-    "> time constant (in s)\n",
-    "\n",
-    "> capacitance (in F)\n",
-    "\n",
-    "> signal magnitude ratio at $f = 3$ kHz."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -439,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
