--- a/Lectures/07_SignalConditioning.ipynb
+++ b/Lectures/07_SignalConditioning.ipynb
@@ -183,22 +183,22 @@
    "source": [
     "_exercise_\n",
     "\n",
-    ">Noise at 1000 Hz is superimposed on a “carrier” frequency of 10 Hz. It is desired to apply a first-order passive low-pass filter to remove the noise so that only the carrier signal remains.\n",
+    ">Noise at 1000 Hz and 1V is superimposed on a “carrier” frequency of 10 Hz and 1V. It is desired to apply a first-order passive low-pass filter to remove the noise so that only the carrier signal remains.\n",
     "\n",
     ">>(a) Choose the cutoff frequency of the low-pass filter. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gain noise 0.09950371902099892\n",
-      "phase carrier -5.710593137499643  deg\n"
+      "Gain noise 0.4472135954999579\n",
+      "phase carrier -1.1457628381751035  deg\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
     "import numpy\n",
     "f_carrier = 10.\n",
     "f_noise = 1000.\n",
-    "f_c = 100.\n",
+    "f_c = 500.\n",
     "G_noise = 1/numpy.sqrt(1+(f_noise/f_c)**2)\n",
     "#G_carrier = 1/numpy.sqrt(1+(f_carrier/f_c)**2)\n",
     "phi_carrier = - numpy.arctan(f_carrier/f_c) *180/numpy.pi\n",
@@ -318,12 +318,12 @@
    "source": [
     "_exercise_\n",
     "\n",
-    ">One is interested in filtering 1 000 Hz noise with filter with cutoff frequency of $f_{cutoff} = 50$ Hz.  What would be the attenuation of this harmonic with Butterworth filters of $1^{st}, 2^{nd}, \\text{and } 4^{th}$ orders.  Express the results in percentage and in decibel."
+    ">One is interested in filtering 1 000 Hz 1V amplitude noise with filter with cutoff frequency of $f_{cutoff} = 50$ Hz.  What would be the attenuation of this harmonic with Butterworth filters of $1^{st}, 2^{nd}, \\text{and } 4^{th}$ orders.  Express the results in percentage and in decibel."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -357,6 +357,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00244140625 V\n",
+      "0.009950371902099893 V 0.0009999500037496875 V\n",
+      "0.0009999500037496875 < 0.00244140625 filter of order 2 and f_c=100 Hz\n",
+      "need to check the phase of the carrier frequency next\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q=(10-(-10))/(2**13)\n",
+    "print(Q,'V')\n",
+    "A_noise = 0.1 #V\n",
+    "f = 1000\n",
+    "f_c = 100\n",
+    "G_1 = 1/numpy.sqrt(1+(f/f_c)**(2*1))\n",
+    "G_2 = 1/numpy.sqrt(1+(f/f_c)**(2*2))\n",
+    "print(A_noise*G_1,'V',A_noise*G_2,'V')\n",
+    "print(A_noise*G_2,'<',Q,'filter of order 2 and f_c=100 Hz')\n",
+    "print('need to check the phase of the carrier frequency next')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,6 +394,13 @@
     "G = \\frac{1}{\\sqrt{1+\\left( \\frac{f_{cutoff}}{f} \\right)^{2n} }}\n",
     "\\end{align*}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -856,6 +892,84 @@
     "A(\\omega) & = \\frac{A_0}{1+i\\frac{\\omega}{\\omega_0}}\n",
     "\\end{align*}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ADC: Range +/-10V\n",
+    "\n",
+    "12 bit\n",
+    "\n",
+    "A_carrier: 10 mV\n",
+    "\n",
+    "f_carrier: 1000 Hz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00244140625 V\n",
+      "0.0048828125 V\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q=20/2**13\n",
+    "print(Q,'V')\n",
+    "DeltaV = 2*Q\n",
+    "print(DeltaV,'V')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Need to amplify... 60-80% of the range\n",
+    "use 60%, V_carrier,amp = 6V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "600.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "G_carrier = 6/0.01\n",
+    "print(G_carrier)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 factors to select number of op-amps:\n",
+    "\n",
+    "1- Gain of op-amp circuit < 30 (because of impedance loading - no ideal op-amp behavior)\n",
+    "\n",
+    "2- Gain Bandwidth Product (GBP=1MHz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
