--- a/Lectures/XX_MidTermReview.ipynb
+++ b/Lectures/XX_MidTermReview.ipynb
@@ -178,6 +178,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.001220703125\n",
+      "28.284271247461902\n",
+      "0.0152587890625\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "Q=10/2**13\n",
+    "print(Q)\n",
+    "print(np.sqrt(800))\n",
+    "print(Q/0.08)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.009999500037496875\n",
+      "-1.4320961841646465\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_carrier = 100.\n",
+    "f_noise = 40000.\n",
+    "f_c = 4000\n",
+    "n = 2\n",
+    "G_noise = 1/np.sqrt(1+(f_noise/f_c)**(2*n))\n",
+    "#G_carrier = 1/numpy.sqrt(1+(f_carrier/f_c)**2)\n",
+    "phi_carrier = - np.arctan(f_carrier/f_c) *180/np.pi\n",
+    "\n",
+    "print(G_noise)\n",
+    "print(phi_carrier)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
