--- a/Lectures/10_UncertaintyAnalysis.ipynb
+++ b/Lectures/10_UncertaintyAnalysis.ipynb
@@ -52,12 +52,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3535533905932738 % FS\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uncertainty of the pressure regulator:\n",
+    "import numpy as np\n",
+    "u_PR = np.sqrt(0.25**2+0.25**2)\n",
+    "print(u_PR,'% FS')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "However, the pressure regulator accuracy is too low for our application and one decides to calibrate it with a pressure transducer that has an accuracy of 0.04 % of FS.\n",
     "\n",
     "> What will be the accuracy of the calibrated instrument?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.26248809496813374 % FS\n"
+     ]
+    }
+   ],
+   "source": [
+    "u_PRcal = np.sqrt(0.08**2+0.25**2)\n",
+    "print(u_PRcal,'% FS')"
    ]
   },
   {
@@ -181,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +227,8 @@
      "output_type": "stream",
      "text": [
       "0.0125 0.0029999999999999996 0.005\n",
-      "0.013793114224133724  V\n"
+      "0.013793114224133724  V\n",
+      "0.0027586228448267447 % FS\n"
      ]
     }
    ],
@@ -205,9 +244,10 @@
     "u_lin = 0.0025 * FS_2 # V\n",
     "u_rep = 0.0006 * FS_2 # V\n",
     "u_th = 0.0001 * FS_2 * tempFlu # V\n",
-    "u_PT = numpy.sqrt(u_lin**2 + u_rep**2 + u_th**2)\n",
+    "u_PT = np.sqrt(u_lin**2 + u_rep**2 + u_th**2)\n",
     "print(u_lin, u_rep, u_th)\n",
-    "print(u_PT, ' V')"
+    "print(u_PT, ' V')\n",
+    "print(u_PT/5, '% FS')\n"
    ]
   },
   {
@@ -227,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -248,28 +288,28 @@
     "LSD = 2* Q # V\n",
     "u_d_lin = 2 * LSD # V\n",
     "u_d_gain = 2 * LSD # V\n",
-    "u_DAS = numpy.sqrt(u_d_lin**2 + u_d_gain**2 + Q**2)\n",
+    "u_DAS = np.sqrt(u_d_lin**2 + u_d_gain**2 + Q**2)\n",
     "print(u_d_lin, u_d_gain, Q)\n",
     "print(u_DAS, ' V')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.013793114224133724 0.007012405574387242\n",
+      "0.013793114224133724 V 0.007012405574387242 V\n",
       "0.015473326466526108  V\n"
      ]
     }
    ],
    "source": [
-    "u_overall = numpy.sqrt(u_PT**2 + u_DAS**2)\n",
-    "print(u_PT, u_DAS)\n",
+    "u_overall = np.sqrt(u_PT**2 + u_DAS**2)\n",
+    "print(u_PT,'V', u_DAS,'V')\n",
     "print(u_overall, ' V')"
    ]
   },
@@ -412,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0033038721822654707 0.006152847936074222\n",
-      "0.009911616546796412 0.012305695872148444\n",
-      "0.01580095862498664\n"
+      "u_abar_Abar,  0.0033038721822654707 u_bbar_Bbar 0.006152847936074222\n",
+      "3 u_abar_Abar 0.009911616546796412 2u_bbar_Bbar 0.012305695872148444\n",
+      "u_c_C 0.01580095862498664\n"
      ]
     }
    ],
@@ -435,12 +475,12 @@
     "\n",
     "u_abar_Abar = 2*S_a/numpy.sqrt(n)/Abar\n",
     "u_bbar_Bbar = 2*S_b/numpy.sqrt(n)/Bbar\n",
-    "print(u_abar_Abar, u_bbar_Bbar)\n",
+    "print('u_abar_Abar, ',u_abar_Abar, 'u_bbar_Bbar', u_bbar_Bbar)\n",
     "\n",
     "C = 10*Abar**3/Bbar**2\n",
     "u_c_C = numpy.sqrt((3*u_abar_Abar)**2+ (-2 *u_bbar_Bbar)**2)\n",
-    "print(3*u_abar_Abar, 2*u_bbar_Bbar)\n",
-    "print(u_c_C)"
+    "print('3 u_abar_Abar', 3*u_abar_Abar, '2u_bbar_Bbar', 2*u_bbar_Bbar)\n",
+    "print('u_c_C',u_c_C)"
    ]
   },
   {
@@ -448,6 +488,67 @@
    "metadata": {},
    "source": [
     "B has the biggest effect on the result: it is less sensitive than A, but has the largest uncertainty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### example 3\n",
+    "\n",
+    "A pressurized air tank is nominally at ambient temperature (15$^\\circ$C). The gas inside obeys the ideal gas law.\n",
+    "\n",
+    "(a) How accurately can the density be determined if the temperature is measured with an uncertainty of\n",
+    "$\\pm1^\\circ$C and the tank pressure is measured with a relative uncertainty of $\\pm0.5$%?\n",
+    "\n",
+    "(b) Suppose now that the density must be measured with an accuracy of $\\pm0.25$%. If the temperature\n",
+    "measurement has an uncertainty of $\\pm 0.5^\\circ$C, how accurate must the pressure measurement be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u_rho_rho 0.0060873908335586455\n"
+     ]
+    }
+   ],
+   "source": [
+    "u_rho_rho = numpy.sqrt((0.005)**2+(1/288)**2)\n",
+    "print('u_rho_rho', u_rho_rho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uPP 0.0017988658120817527\n"
+     ]
+    }
+   ],
+   "source": [
+    "urhorho=0.0025\n",
+    "uTT = 0.5/288\n",
+    "\n",
+    "uPP=numpy.sqrt(urhorho**2-uTT**2)\n",
+    "print('uPP',uPP)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "need to measure pressure within 0.18%"
    ]
   },
   {
@@ -474,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
