--- a/HWs/HW01-Solutions.ipynb
+++ b/HWs/HW01-Solutions.ipynb
@@ -284,9 +284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pressure transducer signal should be amplified to 60-80% of the input of the DAQ system to prevent clipping.  We select a desired voltage of $V_{out} = 4\\, \\text{V}$ and $V_{in} = 5 \\, \\text{mV}$:\n",
+    "The pressure transducer signal should be amplified to 60-80% of the input of the DAQ system to prevent clipping.  We select a desired voltage of $V_{out} = 0.8\\, \\text{V}$ and $V_{in} = 5 \\, \\text{mV}$:\n",
     "\n",
-    "The nominal total gain, $G_{tot} = \\frac{V_{out}}{V_{in}} = \\frac{4}{0.005} = 800$\n"
+    "The nominal total gain, $G_{tot} = \\frac{V_{out}}{V_{in}} = \\frac{0.8}{0.005} = 160$\n"
    ]
   },
   {
@@ -313,9 +313,9 @@
     "\n",
     "We take the smaller values for the two conditions above and therefore the gain of each stage should not exceed $G_{stage} = 20$.  This condition is accomplished for three amplifier stages:\n",
     "\\begin{align}\n",
-    "G_{stage} = \\sqrt[3]{G_{tot}} \\approx 9.28\n",
+    "G_{stage} = \\sqrt[2]{G_{tot}} \\approx 12.7\n",
     "\\end{align}\n",
-    "In practice, I will choose a gain of $G_{stage} = 9$, which will give me an overall gain of $G_{tot} = 729$ and an output voltage of $3.65\\,\\text{V}$, which is within my 60-80% input range of the DAQ system."
+    "In practice, I will choose a gain of $G_{stage} = 12$, which will give me an overall gain of $G_{tot} = 144$ and an output voltage of $720\\,\\text{mV}$, which is within 60-80% input range of the DAQ system."
    ]
   },
   {
